<resources>
    <string name="app_name">CookieClicker</string>
    <string name="scoreAmount">$1000</string>
    <string name="upgrade_robot_hands">Upgrade robot hands</string>
    <string name="_100">$100</string>
    <string name="upgrade_automation">Upgrade Automation</string>
    <string name="_500">$500</string>
    <string name="robot_hands">Robot Hands:   </string>
    <string name="_0">0</string>
    <string name="automation">Automation:</string>
    <string name="upgrades">Upgrades</string>
</resources>