<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackgroundColor">

        <ImageButton
            android:id="@+id/robotHandsInfo_button2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/automationUpgrade_button"
            app:layout_constraintEnd_toStartOf="@+id/automationUpgrade_button"
            app:layout_constraintTop_toTopOf="@+id/automationUpgrade_button"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="603dp"
            android:text="@string/scoreAmount"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/upgradeHands_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:layout_marginBottom="467dp"
            android:backgroundTint="#000000"
            android:text="@string/upgrade_robot_hands"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreText" />

        <ImageButton
            android:id="@+id/robotHandsInfo_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/upgradeHands_button"
            app:layout_constraintEnd_toStartOf="@+id/upgradeHands_button"
            app:layout_constraintTop_toTopOf="@+id/upgradeHands_button"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/robotHandUpgradePrice_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_100"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/upgradeHands_button"
            app:layout_constraintStart_toEndOf="@+id/upgradeHands_button"
            app:layout_constraintTop_toTopOf="@+id/upgradeHands_button" />

        <Button
            android:id="@+id/automationUpgrade_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#000000"
            android:text="@string/upgrade_automation"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/upgradeHands_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/upgradeHands_button"
            app:layout_constraintTop_toBottomOf="@+id/upgradeHands_button" />

        <TextView
            android:id="@+id/automationUpgradePrice_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_500"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/automationUpgrade_button"
            app:layout_constraintStart_toEndOf="@+id/automationUpgrade_button"
            app:layout_constraintTop_toTopOf="@+id/automationUpgrade_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>